--- a/TodoList/Backend/package.json
+++ b/TodoList/Backend/package.json
@@ -19,7 +19,6 @@
   "homepage": "https://github.com/MannyEngi/Todo-List-App---Typescript#readme",
   "dependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.16",
     "cors": "^2.8.5",
@@ -28,5 +27,8 @@
     "mongoose": "^8.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
